src/components/cart/cart.css
.cart_overlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100vh;
    max-height: 100vh;
    background: rgba(43, 46, 64, 0.46);
    display: flex;
    justify-content: flex-end;
}

.cart {
    position: relative;
    padding: 2em;
    background: var(--white-color);
    width: 500px;
    height: 100%;
}

.cart_items_wrapper {
    margin-top: 2em;
}

.cart_item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 1em;
    font-weight: 500;
}

.cart_item_img {
    width: 60px;
    height: 60px;
    margin-right: 15px;
}

.cart_del {
    width: 40px;
    height: 40px;
    cursor: pointer;
    margin-left: 20px;
}

.cart_header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.cart_ctas {
    padding: 0 1em;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin-bottom: 1em;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.flex {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

@media only screen and (max-width: 500px) {
    .cart {
        width: 100%;
        padding: 1.5em 1em;
    }
}

